# basler_cam

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  fastdds_no_shm.xml  requirements.txt
.devcontainer/: devcontainer.json
src/basler_camera/: package.xml  setup.py
src/basler_camera/basler_camera/: camera_node.py
src/basler_camera_cpp/: CMakeLists.txt  package.xml
src/basler_camera_cpp/include/basler_camera_cpp/: basler_camera_node.hpp
src/basler_camera_cpp/launch/: two_cameras.launch.py
src/basler_camera_cpp/src/: basler_camera_node.cpp
src/basler_camera_interfaces/: CMakeLists.txt  package.xml
src/basler_camera_interfaces/srv/: StartVideo.srv  TakeAPicture.srv  TakePictures.srv
